--- a/src/pages/styles.module.scss
+++ b/src/pages/styles.module.scss
@@ -35,10 +35,11 @@
 }
 
 .imgWrapper {
-  filter: drop-shadow(0px 20px 64px rgba(16, 33, 64, 0.12));
   box-sizing: border-box;
 
   img {
+    max-width: 327px;
+    max-height: 240px;
     box-sizing: border-box;
   }
 }
